--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,13 @@ body, html  {
   /*width: 980px;*/
 }
 
+#flash {
+  display: none;
+}
+
+#answer-pic {
+  margin-left: 250px;
+}
 /*html { 
   background: url(../images/usaMap.png) no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -37,7 +44,7 @@ h3 {
   margin-left: 25%;
   color: black;
   width: 50%;
-  background-color: orange;
+  background-color: beige;
 }
 
 .guessButton {
@@ -57,11 +64,38 @@ h3 {
 }
 #question {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 20px;
   margin-bottom: 20px;
   color: black;
   font-size: 24px;
 }
+
+#timer {
+  margin-left: 10px;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  color: black;
+}
+#wrongAnswer {
+  text-align: center;
+  font-size: 18px;
+   font-weight: bold;
+  color: black;
+}
+#feedback,
+#yesNo {
+  text-align: center;
+  font-size: 24px;
+  margin-top: 40px;
+   font-weight: bold;
+  color: black;
+}
+
+/*#feedback {
+
+}*/
+
 /*col-sm-10 {
   margin-top: 200px;
 }*/
@@ -82,10 +116,10 @@ h3 {
 #game2,
 #game1 {
  margin:auto;
- margin-top: 85px;
+ margin-top: 60px;
  margin-left: 100px;
  width:800px;
- height:400px;
+ height:425px;
  background: rgba(50, 105, 70, 0.5);
  position:absolute;
 } 
