--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,28 +4,15 @@
 }
 
 body, html  {
-  /*padding: 0;
-  height: 100%;*/
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   background-image: url(../images/usaMap.png);
   background-size: cover;
-  /*width: 980px;*/
 }
 
-#flash {
-  display: none;
+#center-gif {
+  margin-top: 10px;
+  text-align: center;
 }
-
-#answer-pic {
-  margin-left: 250px;
-}
-/*html { 
-  background: url(../images/usaMap.png) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}*/
 
 h3 {
   text-align: center;
@@ -87,28 +74,10 @@ h3 {
 #yesNo {
   text-align: center;
   font-size: 24px;
-  margin-top: 40px;
+  margin-top: 25px;
    font-weight: bold;
   color: black;
 }
-
-/*#feedback {
-
-}*/
-
-/*col-sm-10 {
-  margin-top: 200px;
-}*/
-
-/*#start {
- margin:auto;
- margin-top: 85px;
- margin-left: 100px;
- width:800px;
- height:400px;
- background: rgba(50, 105, 70, 0.5);
- position:absolute;
-} */
 
 #start,
 #game4,
@@ -119,20 +88,20 @@ h3 {
  margin-top: 60px;
  margin-left: 100px;
  width:800px;
- height:425px;
+ height:500px;
  background: rgba(50, 105, 70, 0.5);
  position:absolute;
 } 
  
-/*#game2 {
- margin:auto;
- margin-top: 85px;
- margin-left: 100px;
- width:800px;
- height:400px;
- background: rgba(189, 193, 198, 0.5);
- position:absolute;
-}*/
+ #stats {
+  margin-left: 200px;
+  margin-top: 200px;
+ }
+
+ #restartButton {
+  margin-left: 100px;
+  margin-top: 30px;
+ }
 
 .questionText {
   font-size: 27px;
@@ -142,7 +111,7 @@ h3 {
 .option{
   width:400px;
   height: 80px;
-  margin: 15px;
+  margin: 20px;
   font-size: 18px;
   color: black;
   cursor: pointer;
@@ -152,21 +121,14 @@ h3 {
   border: grey solid 2px;
   color: grey;
 }
-
-.feedback1 {
-  width: 150px;
-  font-size: 30px;
-  color: green;
-  background-color: blue;
-  font-family: Courier;
+#btw {
+  margin-top: 40px;
   text-align: center;
+  font-size: 24px;
+  color: black;
 }
-.feedback2 {
-  width: 150px;
-  font-size: 30px;
-  color: blue;
-  background-color: green;
-  font-family: Courier;
+#feedback {
+  color: black;
   text-align: center;
 }
 
