--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,8 @@
 body, html  {
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   background-image: url(../images/usaMap.png);
-  background-size: cover;
+  background-size: 100%;
+  background-attachment: fixed;
 }
 
 #center-gif {
@@ -33,8 +34,8 @@ text-align: center;
   font-size: 30px;
   font-family: 'Francois One', sans-serif;
   color: #66001a;
-  text-decoration:
 }
+
 #startButton {
   margin-left: 25%;
   color: black;
@@ -86,7 +87,7 @@ text-align: center;
   text-align: center;
   font-size: 24px;
   margin-top: 25px;
-   font-weight: bold;
+  font-weight: bold;
   color: black;
   font-family: 'Francois One', sans-serif;
 }
@@ -98,15 +99,15 @@ text-align: center;
 #game1 {
  margin:auto;
  margin-top: 60px;
- margin-left: 100px;
- width:800px;
- height:500px;
+ margin-left: 80px;
+ width:780px;
+ height:480px;
  background: rgba(50, 105, 70, 0.5);
  position:absolute;
 } 
  
  #stats {
-   margin-top: 100px;
+  margin-top: 130px;
   font-family: 'Francois One', sans-serif;
   font-size: 24px;
   text-align: center;
@@ -114,8 +115,8 @@ text-align: center;
  }
 
  #restartButton {
-  margin-left: 300px;
-  margin-top: 30px;
+  font-size: 12px;
+  font-family: BlinkMacSystemFont;
  }
 
 .questionText {
@@ -124,28 +125,17 @@ text-align: center;
   font-family: 'Francois One', sans-serif;
 }
 
-.option{
-  width:400px;
-  height: 80px;
-  margin: 20px;
-  font-size: 18px;
-  color: black;
-  cursor: pointer;
-  background-color: white;
-}
-.option:hover {
-  border: grey solid 2px;
-  color: grey;
-}
 #btw {
-  margin-top: 40px;
+  margin-top: 100px;
   text-align: center;
   font-size: 26px;
   color: black;
+  padding: 10px;
   font-family: 'Francois One', sans-serif;
 }
 #feedback {
   color: black;
   text-align: center;
+  padding: 10px;
   font-family: 'Francois One', sans-serif;
 }
